intermediate commit
Signed-off-by: Dimitar Dinev <mitkojc@gmail.com>